--- a/MeshReducer/MeshReducer/MeshReducer.csproj
+++ b/MeshReducer/MeshReducer/MeshReducer.csproj
@@ -83,9 +83,11 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="OBJLoader\OBJLoader.cs" />
+    <Compile Include="OBJLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SMDLoader.cs" />
+    <Compile Include="Texture.cs" />
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
