--- a/MeshReducer/MeshReducer/MeshReducer.csproj
+++ b/MeshReducer/MeshReducer/MeshReducer.csproj
@@ -98,6 +98,7 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mesh.cs" />
     <Compile Include="OBJLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
