--- a/MeshReducer/MeshReducer/MeshReducer.csproj
+++ b/MeshReducer/MeshReducer/MeshReducer.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Mesh.cs" />
+    <Compile Include="MeshReducer.cs" />
     <Compile Include="OBJLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
